[project]
name = "China-Sector-Package-Tutorial"
version = "0.0.alpha"
description = "Default template for PDM package"
authors = [
    {name = "Master_Gui", email = "gui.shifu@outlook.com"},
    {name = "Xiao_Zhang", email = "3162273852@qq.com"},
]
dependencies = [
    "click==8.3.1",
    "colorama==0.4.6",
    "deepmerge==2.0",
    "ghp-import==2.1.0",
    "griffe==1.15.0",
    "Jinja2==3.1.6",
    "Markdown==3.10.1",
    "MarkupSafe==3.0.3",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-autorefs==1.4.3",
    "mkdocs-get-deps==0.2.0",
    "mkdocstrings==1.0.2",
    "mkdocstrings-python==2.0.1",
    "packaging==26.0",
    "pathspec==1.0.3",
    "platformdirs==4.5.1",
    "Pygments==2.19.2",
    "pymdown-extensions==10.20.1",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.3",
    "pyyaml-env-tag==1.1",
    "six==1.17.0",
    "watchdog==6.0.0",
    "zensical==0.0.19",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "NONE"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
